Fix form widths on mobile and add escape link to signup.

--- a/assets/sass/forms.scss
+++ b/assets/sass/forms.scss
@@ -13,6 +13,7 @@ input[type=email] {
   border: 1px solid var(--color-border-med);
   outline: none;
   box-shadow: var(--shadow-inset);
+  min-width: 100px;
 
   &:active,
   &:focus {
